# OpenCVProjectwithCMAKE

./: README
src/: CMakeLists.txt  svm.cpp
